# gargantua

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.github/: dependabot.yml
color/: Cargo.toml
color/benches/: blackbody.rs
color/example/: blackbody.rs
color/examples/: blackbody.rs  custom_spd.rs
color/src/: blackbody.rs  color.rs  gamut.rs  lib.rs  xyz.rs
gargantua/: Cargo.toml
gargantua-bin/: Cargo.toml
gargantua-bin/src/: main.rs
gargantua/benches/: scene.rs
gargantua/examples/: scene.rs
gargantua/src/: lib.rs  physics.rs  raytrace.rs  schwardzchild.rs  texture.rs  utils.rs
src/: lib.rs
starless/: Cargo.toml
starless-bin/: Cargo.toml
starless-bin/src/: main.rs
starless/benches/: scene.rs
starless/examples/: scene.rs
starless/src/: lib.rs  physics.rs  raytrace.rs  schwardzchild.rs  texture.rs  utils.rs
