[package]
name = "gargantua-bin"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

[dependencies]
color = { path = "../color" }
gargantua = { path = "../gargantua" }
clap = "2.33.0"
image = "0.23.2"
nalgebra = "0.18.0"
ncurses = "5.99.0"
rand = "0.7.0"
regex = "1.2.1"
