[package]
name = "gargantua"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

[dependencies]
color = {path = "../color"}
image = "0.22.1"
nalgebra = "0.24.1"
rayon = "1.1.0"
approx = "0.3.2"
num_cpus = "1.10.1"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.7.0"

[[bench]]
name = "scene"
harness = false
